--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "postinstall-build": "^5.0.3"
+    "babel-preset-stage-2": "^6.24.1"
   },
   "peerDependencies": {
     "boardgame.io": ">= 0.26.3"
+  },
+  "dependencies": {
+    "postinstall-build": "^5.0.3"
   }
 }
