--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "build": "babel src -d build",
     "postinstall": "npm run build"
   },
-  "devDependencies": {
+  "peerDependencies": {
+    "boardgame.io": ">= 0.26.3"
+  },
+  "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1"
-  },
-  "peerDependencies": {
-    "boardgame.io": ">= 0.26.3"
   }
 }
